# Patrones-de-piel-en-dermatolog-a

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  train.py  train_ham10000.py
docs/: INFORME_PROYECTO.md
scripts/: generate_sample_images.py
src/: __init__.py
src/skin_patterns/: __init__.py  cli.py  clustering.py  config.py  features.py  ham10000.py  pipeline.py  preprocessing.py
